# Gomoku

./: CMakeLists.txt  README.md  gomoku_model.pt  model.py  processTrainModel.py  runModelAndReturnPoint.py
.github/workflows/: release.yml
docs/: packaging.md
include/gomoku/: game_session.h  main.h  ui_controller.h  voice.h  webConnect.h
include/gomoku/audio/: voice.h
include/gomoku/core/: game_session.h
include/gomoku/net/: webConnect.h  webconnect_protocol.h
include/gomoku/ui/: ui_controller.h  ui_controller_internal.h
python/: gomoku_ai.pyi  gomoku_core.py  gomoku_net.py  mcts_core.py  model.py
python/inference/: runModelAndReturnPoint.py
python/training/: processTrainModel.py
src/: app.cpp  main.cpp  ui_controller.cpp  voice.cpp  webConnect.cpp
src/ai/: ai_player.cpp  bindings.cpp
src/app/: app.cpp
src/audio/: voice.cpp
src/core/: engine.cpp  game_session.cpp
src/net/: webConnect.cpp
src/ui/: ui_controller.cpp  ui_controller_state.cpp  ui_controller_views.cpp
tests/: regression_tests.cpp
